fixed mobile device overflow problem

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,9 @@ html,
 body {
   font-family: "Ubuntu", sans-serif;
   font-stretch: expanded;
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
 }
 
 #app {
@@ -165,19 +168,17 @@ label {
 
 #app.app__main-container {
   width: 100%;
-  height: 100dvh;
-  max-height: 100dvh;
+  height: 100%;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
   color: var(--mainFontColor);
-  overflow-y: clip;
 }
 
 .app__main-container--header {
   width: 100%;
-  height: 16dvh;
+  height: 16vh;
   background: var(--componentsBackground);
   padding: var(--layoutPadding);
   display: flex;
@@ -225,7 +226,7 @@ label {
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  margin: 20px 0 5px 0;
+  margin: 20px 0 0 0;
 }    
 
 .app__main-container--header-buttons .btn:first-child {
@@ -234,24 +235,24 @@ label {
 
 .app__main-container--map {
   width: 100%;
-  max-height: 72dvh;
   height: 100%;
+  max-height: 100%;
   display: block;
   position: relative;
 }
 
 .app__main-container--footer {
   width: 100%;
-  height: 12dvh;
-  z-index: 9999;
+  height: 16vh;
   background: var(--componentsBackground);
-  padding: var(--layoutPadding);
-  bottom: 0px;
+  padding: var(--layoutPadding);  
   font-size: .8rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  /* position: fixed;
+  bottom: 0px; */
 }
 
 .app__main-container--footer-status,
